[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rebalancer-cli"
version = "0.1.0"
authors = [
  { name="Aaron Cruz", email="aaron.m.cruz@rutgers.edu" },
]
description = "A CLI tool for contribution-only portfolio rebalancing."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pytest>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/aaronCruise/Portfolio-Rebalancer"
"Bug Tracker" = "https://github.com/aaronCruise/Portfolio-Rebalancer/issues"

[project.scripts]
rebalance = "rebalancer.main:main"

[tool.setuptools]
packages = ["rebalancer"]
